Fix gap

--- a/src/pages/Product/Product.scss
+++ b/src/pages/Product/Product.scss
@@ -170,7 +170,10 @@
 
 .suggestions {
   margin-top: 80px;
-  margin-bottom: 24px;
+
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
 
   &__products {
     display: flex;
